Update all files including env files and database config (excluding token.json)

--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "server:start": "node llama-groq-express/src/server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "firebase": "^12.7.0",
     "groq-sdk": "^0.37.0",
-    "mysql2": "^3.12.0",
-    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
